--- a/index.css
+++ b/index.css
@@ -1,29 +1,2 @@
-        body {background-color:282828;}
-        h1 {color: E0A241; text-decoration:underline;
-text-decoration-style: dotted;}
-        h4 {color: FEB036; text-decoration:underline;
-text-decoration-style: dotted;}
-        p {color: CBBD9C;}
-a:link {
-  color: 92911A;
-  background-color: transparent;
-  text-decoration: none;
-}
+        body {background-color:#282828;}
 
-a:visited {
-  color: FF2F88;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: FB5F0F;
-  background-color: transparent;
-  text-decoration: underline;
-}
-
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
