--- a/index.css
+++ b/index.css
@@ -1,2 +1,8 @@
         body {background-color:#282828;}
+         h1 {color:#E0A241; text-decoration:underline;
+        text-decoration-style: dotted;}
+        h4 {color:#FEB036; text-decoration:underline;
+        text-decoration-style: dotted;}
+        p {color:#CBBD9C;}
+
 
