--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {background-color:#282828;}
+body {background-color:#282828;max-width:900px;margin:7% auto auto;padding:0 5%}
 h1 {color:#FEA10B;}
 h4 {color:#FEA10B;text-decoration:underline;
 text-decoration-style:dotted;}
